# Capstone_Project

./: .coverage  .gitignore  PROJECT_PLAN.md  README.md  ai.md  analyzedata.ipynb  docker-compose.yml  dockerfile  pyproject.toml  train.ipynb
.github/workflows/: cd.yml  ci.yml
app/: config.py  create_baseline.py  evaluation.py  explainability.py  explanation_toolcall.py  llm.py  main.py  model_loader.py  monitoring.py  prediction_store.py  preprocess.py  requirements.txt  schema.py
app/scripts/: artifacts_download.py  test_s3.py  upload_artifacts.py
app/services/: artifact_service.py  s3_services.py
artifacts/data/: X_test.csv  X_train.csv  y_test.csv  y_train.csv
artifacts/feature/: feature_importance.csv
artifacts/model/: imputer.joblib  model.joblib  train_columns.joblib
tests/: test_api.py  test_env.py  test_openai.py  test_prompt.py  test_shap.py
