[project]
name = "obesity-prediction-api"
version = "0.1.0"
description = "FastAPI service for obesity prediction"

requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.131.0",
    "uvicorn>=0.41.0",
    "pydantic>=2.12.5",
    "pandas>=3.0.1",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
    "xgboost>=2.0.3",
    "joblib>=1.3.0",
    "ipykernel>=7.2.0",
    "pip>=26.0.1",
]

[tool.uv]
# uv-specific settings (optional for now)

