[project]
name = "obesity-prediction-api"
version = "0.1.0"
description = "FastAPI service for obesity prediction"

requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.131.0",
    "uvicorn>=0.41.0",
    "pydantic>=2.12.5",
    "pandas>=3.0.1",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
    "xgboost>=2.0.3",
    "joblib>=1.3.0",
]

[tool.uv]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ipykernel>=7.2.0"

]
[tool.pytest.ini_options]
pythonpath = ["."]

[tool.flake8]
exclude = [".venv", "__pycache__", ".git"]
max-line-length = 88

# uv-specific settings (optional for now)

